# polynomial_plotter

./: 0.bootstrap.js  1.bootstrap.js  2.bootstrap.js  3.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
src/: lib.rs  polynomial.rs  utils.rs
www/: bootstrap.js  index.html  index.js  package.json  style.css  webpack.config.js
