[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
plotters = "0.3.2"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement", "console"] }
plotters-canvas = "0.3.0"

[profile.release]
lto = true
